# fairmind-mcp

./: .gitignore  README.md  TESTING.md  package.json
docs/: BENCHMARKING.md  BENCHMARK_RESULTS.md  BIAS_PARAMETERS.md  CLAUDE_DESKTOP_PROMPTS.md  CLAUDE_DESKTOP_SETUP.md  CODE_BIAS_DETECTION.md  CURSOR_SETUP.md  DIFFERENTIAL_ANALYSIS.md  ENHANCED_METRICS.md  GITHUB_PAGES_DEPLOYMENT.md  HOW_TO_TEST.md  INTEGRATION_EXAMPLES.md  LLM_TESTING_GUIDE.md  MANUAL_TESTING_GUIDE.md  NEXT_STEPS.md  PERFORMANCE_OPTIMIZATIONS.md  QUICKSTART.md  QUICK_START_USE_CASES.md  README.md  REAL_WORLD_TESTING.md  REAL_WORLD_TESTING_QUICK_START.md  REAL_WORLD_TESTING_RESULTS.md  REFACTORING_SUMMARY.md  REPOSITORY_BIAS_ANALYSIS.md  REPOSITORY_BIAS_RESPONSIBLE_USE.md  REPO_ORGANIZATION.md  TESTING_ENHANCED_METRICS.md  TEST_RESULTS.md  TEST_RESULTS_REAL_WORLD.md  USE_CASES.md  WORKSPACE_ORGANIZATION.md
py_engine/: .gitignore  README.md  __init__.py  auditor.py  bias_config.json  inference.py  main.py  models.py  pyproject.toml
py_engine/core/: __init__.py  ast_analyzer.py  auditor.py  code_auditor.py  codec.py  config_loader.py  differential_analyzer.py  inclusive_terminology.py  inference.py  repository_analyzer.py  repository_cache.py
py_engine/tools/: __init__.py  analyze_repository_bias.py  compare_code_bias.py  evaluate_bias.py  evaluate_bias_advanced.py  evaluate_model_outputs.py  evaluate_model_response.py  evaluate_prompt_suite.py  generate_counterfactuals.py  registry.py
scripts/: setup-claude-desktop.sh  setup-cursor.sh  verify-manual-setup.sh  verify-tools.sh
src/: index.ts  (+2 more)
(+23 files in other folders)
