[project]
name = "py-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ai-edge-litert>=2.0.3",
    "aif360>=0.5.0",
    "esprima>=4.0.1",
    "fairlearn>=0.13.0",
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "pydantic>=2.12.5",
    "scikit-learn>=1.5.0",
]
